feat: get employees flow refactoring v2